# lendamobile

./: .env_sample  .fvmrc  .gitattributes  .gitignore  PRIVACY_POLICY.md  README.md  analysis_options.yaml  android.just  cleanup_code.md  codemagic.yaml  common.just  dprint.json  flutter.just  flutter_rust_bridge.yaml  ios.just  justfile  l10n.yaml  pubspec.yaml
.claude/: settings.local.json
.claude/agents/: lendasat-integration-expert.md  lendaswap-expert.md
.github/workflows/: build-android.yml  build-ios.yml  ci.yml
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
docs/: app_recompile.md  arkade_loan_flow.md  evm_to_btc_swap_issue.md  key_derivation.md  lendasat_implementation_plan.md  lendaswap_implementation.md  native_evm_wallet_integration.md  onchain_send_implementation_plan.md  onramp_offramp_testing.md  posthog_implementation.md  provide_feedback_implementation.md  wallet_connect_integration.md  wallet_mnemonic_migration.md
integration_test/: simple_test.dart
ios/: Podfile
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: app_theme.dart  main.dart  theme.dart
lib/l10n/: app_ar.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hi.arb  app_id.arb  app_it.arb  app_ja.arb  app_localizations.dart  app_localizations_ar.dart  app_localizations_de.dart  app_localizations_en.dart  app_localizations_es.dart  app_localizations_fr.dart  app_localizations_hi.dart  app_localizations_id.dart  app_localizations_it.dart  app_localizations_ja.dart  app_localizations_ur.dart  app_localizations_zh.dart  app_ur.arb  app_zh.arb
lib/services/: theme_service.dart
lib/src/constants/: bitcoin_constants.dart
lib/src/logger/: hybrid_logger.dart  logger.dart  simple_utc_printer.dart
lib/src/models/: app_theme_model.dart  swap_token.dart  wallet_activity_item.dart
lib/src/models/mempool_new/: address_component.dart  bitcoin_data.dart  chartline.dart  hash_chart_model.dart  lnd_transaction_model.dart  mempool_model.dart  outspends_model.dart  transactionCacheModel.dart  transactionRbfModel.dart  transaction_model.dart  transactiondata.dart  txConfirmDetail.dart  txModel.dart  txPaginationModel.dart  txPosition.dart  validate_address_component.dart
lib/src/providers/: theme_provider.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lendaswap.dart  logger.dart
lib/src/rust/api/: ark_api.dart  ark_api.freezed.dart  bitcoin_api.dart  lendasat_api.dart  lendasat_api.freezed.dart  lendaswap_api.dart  mempool_api.dart  mempool_block_tracker.dart  mempool_ws.dart  moonpay_api.dart
lib/src/rust/ark/: client.dart
lib/src/rust/lendasat/: models.dart
lib/src/rust/models/: exchange_rates.dart  historical_prices.dart  mempool.dart  moonpay.dart
lib/src/services/: amount_widget_service.dart  analytics_service.dart  biometric_service.dart  bitcoin_price_service.dart  boarding_tracking_service.dart  coinbase_service.dart  currency_preference_service.dart  feedback_service.dart  language_service.dart  lendasat_service.dart  lendaswap_price_service.dart  lendaswap_service.dart  lnurl_service.dart  moonpay_service.dart  onchain_monitoring_service.dart  overlay_service.dart  payment_monitoring_service.dart  payment_overlay_service.dart  pending_transaction_service.dart  recipient_storage_service.dart  settings_controller.dart  settings_service.dart  swap_monitoring_service.dart  theme_service.dart  timezone_service.dart  transaction_filter_service.dart  user_preferences_service.dart  wallet_connect_service.dart
lib/src/services/send/: address_parser_service.dart
lib/src/ui/screens/: amount_input_screen.dart  bottom_nav.dart  change_currency_screen.dart  change_language_screen.dart  change_style_screen.dart  change_timezone_screen.dart  contract_detail_screen.dart  dashboard_screen.dart  email_signup_screen.dart  evm_swap_funding_screen.dart  loan_offer_detail_screen.dart  loans_screen.dart  mnemonic_input_screen.dart  onboarding_screen.dart  qr_scanner_screen.dart  receive_screen.dart  receivescreen.dart  send_screen.dart  settings_screen.dart  sign_transaction_screen.dart  swap_detail_screen.dart  swap_processing_screen.dart  swap_screen.dart  swap_success_screen.dart  transaction_details_dialog.dart  transaction_filter_screen.dart  transaction_history_widget.dart  transaction_success_screen.dart  walletscreen.dart
lib/src/ui/screens/buy/: buy_screen.dart  (+2 more)
lib/src/ui/utility/: amount_widget.dart
lib/src/ui/widgets/: blinking_dot.dart
lib/src/utils/: address_validator.dart  app_settings_launcher.dart  date_formatter.dart  number_formatter.dart
linux/: CMakeLists.txt  my_application.cc
linux/flutter/: generated_plugins.cmake
macos/Flutter/: GeneratedPluginRegistrant.swift
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
macos/Runner/Configs/: AppInfo.xcconfig
rust/: Cargo.toml
rust/src/: frb_generated.rs  lib.rs  logger.rs  state.rs
rust/src/api/: ark_api.rs  bitcoin_api.rs  lendasat_api.rs  lendaswap_api.rs  mempool_api.rs  mempool_block_tracker.rs  mempool_ws.rs  mod.rs  moonpay_api.rs  simple.rs
rust/src/ark/: address_helper.rs  client.rs  esplora.rs  mnemonic_file.rs  mod.rs  seed_file.rs  storage.rs
rust/src/lendasat/: auth.rs  mod.rs  models.rs  storage.rs
rust/src/lendaswap/: mod.rs  storage.rs  swap_db.rs  vtxo_swap_db.rs
rust/src/models/: exchange_rates.rs  historical_prices.rs  mempool.rs  mod.rs  moonpay.rs
rust_builder/: pubspec.yaml
rust_builder/android/: build.gradle  settings.gradle
rust_builder/android/src/main/: AndroidManifest.xml
rust_builder/cargokit/gradle/: plugin.gradle
rust_builder/ios/: rust_lib_ark_flutter.podspec
rust_builder/linux/: CMakeLists.txt
rust_builder/macos/: rust_lib_ark_flutter.podspec
rust_builder/windows/: CMakeLists.txt
scripts/: install-hooks.sh  pre-commit  pre-commit-hook.sh  setup-hooks.sh
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/flutter/: generated_plugins.cmake
windows/runner/: Runner.rc  main.cpp
(+163 files in other folders)
