[package]
name = "rust_lib_ark_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
ark-bdk-wallet = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "8028a" }
ark-core = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "8028a" }
ark-client = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "8028a", default-features = false, features = ["tls-webpki-roots"] }
# ark-bdk-wallet = { path = "/Users/bonomat/src/github/arkade/rust-sdk/ark-bdk-wallet" }
# ark-client = { path = "/Users/bonomat/src/github/arkade/rust-sdk/ark-client", default-features = false, features = ["tls-webpki-roots"] }
# ark-core = { path = "/Users/bonomat/src/github/arkade/rust-sdk/ark-core" }
async-trait = "0.1"
bitcoin = { version = "0.32.4", features = ["rand"] }
esplora-client = { version = "0.11.0", features = ["async-https-native"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["anyhow"] }
futures = "0.3.31"
futures-util = "0.3"
hex = "0.4"
nostr = { version = "0.40.0", default-features = false, features = ["std"] }
openssl = { version = "0.10", features = ["vendored"] }
parking_lot = { version = "0.12.1" }
rand = "0.8.5"
reqwest = { version = "0.12", features = ["json", "native-tls-vendored"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
state = "0.6.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "time", "json"] }
url = "2.5.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
