[package]
name = "rust_lib_ark_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"

# Lendasat SDK for wallet encryption (email recovery)
lendasat-sdk = { path = "/home/weltitob/lendasat/lendasat/client-sdk", package = "client-sdk" }
# SRP authentication
srp = "0.6.0"
ark-bdk-wallet = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "09b073269c944a25eef5e1f92fd2ae2a5ef2ea28" }
ark-client = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "09b073269c944a25eef5e1f92fd2ae2a5ef2ea28", default-features = false, features = ["tls-webpki-roots"] }
ark-core = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "09b073269c944a25eef5e1f92fd2ae2a5ef2ea28" }

# LendaSwap SDK from GitHub (tag 0.0.61)
lendaswap-core = { git = "https://github.com/lendasat/lendaswap.git", tag = "0.0.61", package = "lendaswap-core" }
rust_decimal = { version = "1", features = ["serde-with-float"] }
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
sha2 = "0.10"
bip39 = { version = "2.1.0", features = ["rand_core"] }
# ark-bdk-wallet = { path = "/Users/bonomat/src/github/arkade/rust-sdk/ark-bdk-wallet" }
# ark-client = { path = "/Users/bonomat/src/github/arkade/rust-sdk/ark-client", default-features = false, features = ["tls-webpki-roots"] }
# ark-core = { path = "/Users/bonomat/src/github/arkade/rust-sdk/ark-core" }
async-trait = "0.1"
bitcoin = { version = "0.32.4", features = ["rand"] }
esplora-client = { version = "0.11.0", features = ["async-https-native"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["anyhow"] }
futures = "0.3.31"
futures-util = "0.3"
hex = "0.4"
nostr = { version = "0.40.0", default-features = false, features = ["std"] }
openssl = { version = "0.10", features = ["vendored"] }
parking_lot = { version = "0.12.1" }
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "native-tls-vendored"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
state = "0.6.0"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "time", "json"] }
url = "2.5.4"

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Patch to resolve dependency conflict between arkade-os/rust-sdk and ArkLabsHQ/ark-rs
# Both repos use the same rev but different URLs - redirect to use a single source
[patch."https://github.com/arkade-os/rust-sdk"]
ark-core = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "09b073269c944a25eef5e1f92fd2ae2a5ef2ea28" }
ark-rest = { git = "https://github.com/ArkLabsHQ/ark-rs.git", package = "ark-rest", rev = "09b073269c944a25eef5e1f92fd2ae2a5ef2ea28" }
ark-rs = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "09b073269c944a25eef5e1f92fd2ae2a5ef2ea28" }
ark-secp256k1 = { git = "https://github.com/ArkLabsHQ/ark-rs.git", rev = "09b073269c944a25eef5e1f92fd2ae2a5ef2ea28" }
