[package]
name = "rust_lib_ark_flutter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "staticlib"]

[dependencies]
anyhow = "1"
base64 = "0.22"

# SRP authentication
# Using lendasat fork with collaborative_redeem_vtxo_selection for proper VTXO selection
# TODO: Update to upstream master once fee estimation is synced to fork
ark-bdk-wallet = { git = "https://github.com/lendasat/arkade-rust-sdk.git", branch = "feat/collaborative_redeem_with_vtxos" }
ark-client = { git = "https://github.com/lendasat/arkade-rust-sdk.git", branch = "feat/collaborative_redeem_with_vtxos", default-features = false, features = ["tls-webpki-roots", "sqlite"] }
ark-core = { git = "https://github.com/lendasat/arkade-rust-sdk.git", branch = "feat/collaborative_redeem_with_vtxos" }
srp = "0.6.0"

# LendaSwap SDK from GitHub
async-trait = "0.1"
bip39 = { version = "2.1.0", features = ["rand_core"] }
bitcoin = { version = "0.32.4", features = ["rand"] }
esplora-client = { version = "0.11.0", features = ["async-https-native"] }
flutter_rust_bridge = { version = "=2.11.1", features = ["anyhow"] }
futures = "0.3.31"
futures-util = "0.3"
hex = "0.4"
lendaswap-core = { git = "https://github.com/lendasat/lendaswap-sdk.git", rev = "4ed3852", package = "lendaswap-core" }
nostr = { version = "0.40.0", default-features = false, features = ["std"] }
openssl = { version = "0.10", features = ["vendored"] }
parking_lot = { version = "0.12.1" }
rand = "0.8.5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "native-tls-vendored"] }
rust_decimal = { version = "1", features = ["serde-with-float"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.145"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
state = "0.6.0"
time = { version = "0.3", features = ["serde", "formatting", "parsing", "macros"] }
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
tracing = "0.1.37"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt", "env-filter", "time", "json"] }
url = "2.5.4"
uuid = { version = "1.0", features = ["v4", "serde"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }

# Patch lendaswap-core's arkade SDK dependency to use our fork
# This resolves secp256k1 linking conflicts by ensuring all ark packages use the same revision
[patch."https://github.com/arkade-os/rust-sdk"]
ark-secp256k1 = { git = "https://github.com/lendasat/arkade-rust-sdk.git", branch = "feat/collaborative_redeem_with_vtxos" }
ark-core = { git = "https://github.com/lendasat/arkade-rust-sdk.git", branch = "feat/collaborative_redeem_with_vtxos" }
ark-rest = { git = "https://github.com/lendasat/arkade-rust-sdk.git", branch = "feat/collaborative_redeem_with_vtxos" }
